[metadata]
name = zyte_api_convertor
version = 1.0.1
author = Mukthy
author_email = muktheeswaran.m@gmail.com
description = A simple python module for Zyte Scrapy ZyteAPI projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/mukthy/zyte_api_convertor
project_urls =
    Bug Tracker = https://gitlab.com/mukthy/zyte_api_convertor/-/issues
    repository = https://gitlab.com/mukthy/zyte_api_convertor
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    packaging
    scrapy
    zyte-api
    scrapy-zyte-api
    black

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    zyte-api-convertor = zyte_api.convertor:main